--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container-xxl bg-white p-0">
+﻿@model QueroBar.Models.ViewModels.LoginViewModel
+
+<div class="container-xxl bg-white p-0">
     <!-- Spinner Start -->
     <div id="spinner"
          class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -10,14 +12,25 @@
 </div>
 
 <div class="page">
-    <form action="/Login/login" method="post" class="formLogin">
+    <form method="post" asp-controller="Account" asp-action="Login" class="formLogin">
+        <span asp-validation-for="Error" class="text-danger"></span>
         <img src="/img/QueroBarLogo.png" alt="">
         <p>Digite os seus dados de acesso nos campos abaixo.</p>
-        <label for="email">E-mail</label>
-        <input type="email" name="usuario" placeholder="Digite seu e-mail" autofocus />
-        <label for="password">Senha</label>
-        <input type="password" name="senha" placeholder="Digite seu senha" />
-        <a asp-controller="Clientes" asp-action="Create" class="nav-item nav-link">Criar Conta</a>
-        <input type="submit" value="Acessar" class="btn" />
+
+        <label asp-for="Email">Email</label>
+            <input asp-for="Email" name="email" class="form-control" type="email" placeholder="Digite seu e-mail" autofocus>
+        <span asp-validation-for="Email" class="text-danger"></span>
+
+        <label asp-for="Password" class="control-label">Senha</label>
+            <input asp-for="Password" name="Password" type="password" placeholder="Digite seu senha">
+        <span asp-validation-for="Password" class="text-danger"></span>
+        <a asp-controller="Account" asp-action="Register" class="nav-item nav-link">Criar Conta</a>
+
+        <label>
+            <input type="checkbox" asp-for="KeepLoggedIn" />
+            Keep me logged In.
+        </label>
+
+        <button type="submit" class="btn">Acessar</button>
     </form>
 </div>
