Create Evento Funcionando

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
 <div class="page">
     <form method="post" asp-controller="Account" asp-action="Login" class="formLogin">
         <span asp-validation-for="Error" class="text-danger"></span>
-        <img src="/img/QueroBarLogo.png" alt="">
+        <img src="/images/QueroBarLogo.png" alt="">
         <p>Digite os seus dados de acesso nos campos abaixo.</p>
 
         <label asp-for="Email">Email</label>
