--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-2">
         <a asp-controller="Home" asp-action="Index" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-            <img src="/img/QueroBarLogo.png" width="194px" height="52px" alt="">
+            <img src="/images/QueroBarLogo.png" width="194px" height="52px" alt="">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
