--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,30 @@
 </head>
 <html lang="en">
 <body>
+
+    <style>
+        .dropdown2 {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content2 {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            padding: 12px 16px;
+            z-index: 1;
+            left: -80px;
+        }
+
+        .dropdown2:hover .dropdown-content2 {
+            display: flow;
+        }
+    </style>
+
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-2">
         <a asp-controller="Home" asp-action="Index" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
@@ -40,10 +64,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
+
                 <a asp-controller="Home" asp-action="Index" class="nav-item nav-link active">Home</a>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <a asp-controller="Account" asp-action="LogOut" class="nav-item nav-link">Sair do Sistema</a>
+                    var userClaims = User.Claims;
+                    var roleClaim = userClaims.FirstOrDefault(c => c.Type == "OtherProperties");
+                    string role = roleClaim?.Value;
+
+                    if(role == "Client")
+                    {
+                        <a asp-controller="Event" asp-action="Create" class="nav-item nav-link">Criar Evento</a>
+                    }
+                    <a asp-controller="Account" asp-action="LogOut" class="nav-item nav-link">Sair</a>
                 }
                 else
                 {
