--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                 }
             </div>
             <a class="btn btn-outline btn-social pt-4" asp-controller="Carrinhos" asp-action="Index"><i class="fas fa-shopping-cart"></i></a>
-            <a class="btn btn-outline btn-social pt-4" asp-controller="Clientes" asp-action="Index"><i class="fas fa-user"></i></a>
+            <a class="btn btn-outline btn-social pt-4" asp-controller="Account" asp-action="Perfil"><i class="fas fa-user"></i></a>
         </div>
     </nav>
 
