--- a/Views/Account/Perfil.cshtml
+++ b/Views/Account/Perfil.cshtml
@@ -77,7 +77,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Tipo de Conta</label>
-                                    <select asp-for="Membership_Id" class="form-control border-0" name="Membership_Id">
+                                    <select asp-for="Membership" class="form-control border-0" name="Membership_Id">
                                         <option selected>Categoria</option>
                                         @foreach (var membership in memberships)
                                         {
